<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardview_margin"
            android:layout_marginEnd="@dimen/cardview_margin"
            android:layout_marginTop="@dimen/cardview_margin"
            android:layout_marginBottom="@dimen/cardview_margin"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/cardview_corner"
            app:cardElevation="@dimen/cardview_elevation">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profile_image"
                    android:contentDescription="@string/content_desc_user_profile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_avatar_height"
                    android:scaleType="centerInside"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/user_avatar"/>

                <ProgressBar
                    android:id="@+id/myProgressBarEdit"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:layout_alignTop="@id/profile_image"
                    android:layout_below="@id/profile_image"
                    android:layout_centerHorizontal="true"/>

                <ImageView
                    android:id="@+id/profile_edit"
                    android:contentDescription="@string/profile_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBottom="@id/profile_image"
                    android:src="@drawable/ic_create_black_24dp"/>

                <LinearLayout
                    android:layout_below="@id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/user_name"
                        android:hint="@string/user_name_profile_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/user_status"
                        android:hint="@string/user_status_profile_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/user_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/user_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="@string/hint_user_age"/>

                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_save"
        app:elevation="@dimen/fab_elevation"
        android:layout_gravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>