<resources>

    <!-- no translatable -->
    <string name="app_name" translatable="false">Fleekard</string>
    <string name="check_push_settings_male" translatable="false">PREF_CHECK_PUSH_MALE</string>
    <string name="check_push_settings_female" translatable="false">PREF_CHECK_PUSH_FEMALE</string>
    <string name="tos_link" translatable="false">https://tiagofrbarbosa.github.io/tos_pp/fleekard/tos.html</string>
    <string name="privacy_policy_link" translatable="false">https://tiagofrbarbosa.github.io/tos_pp/fleekard/mobile-privacy-policy-geolocated-apps.html</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="distance_key_settings">PREF_DISTANCE_KEY</string>
    <string name="age_range_key_settings">PREF_AGE_KEY</string>

    <!-- translatable -->
    <string name="action_settings">Settings</string>
    <string name="profile_settings">Profile settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_close">Close</string>
    <string name="favorite_user_text">you liked this user on this day: </string>
    <string name="send_button_label">Send</string>
    <string name="settings_title_category_gender">Gender</string>
    <string name="settings_title_category_distance_and_age">Distance and Age</string>
    <string name="notification_desc_msg">sent a message</string>
    <string name="notification_desc_like">liked your profile</string>
    <string name="notification_desc_visited">visited your profile</string>
    <string name="default_status">Hey there! I am using Fleekard.</string>
    <string name="hint_user_age">Your age</string>
    <string name="toast_edittext_username">Username is required!</string>
    <string name="toast_edittext_userstatus">User status is required!</string>
    <string name="toast_edittext_userage">User age is required!</string>
    <string name="toast_user_data_update">User data updated!</string>
    <string name="photo_picker_intent">Complete action using</string>
    <string name="paralax">user photo</string>
    <string name="snackbar_welcome">Welcome! complete your profile</string>
    <string name="snackbar_request_permission_rationale">the userLocation is required to see other users!</string>
    <string name="widget_no_user">no user logged in!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="male_summary_check">shows male users</string>
    <string name="male_title_check">Male</string>
    <string name="female_summary_check">shows female users</string>
    <string name="female_title_check">Female</string>
    <string name="distance_title_settings">Distance</string>
    <string name="distance_summary_settings">shows users by approximate distance in KM</string>
    <string name="age_range_title_settings">Age range</string>
    <string name="age_range_summary_settings">shows users up to the maximum age set</string>
    <string name="offline_textview">you are offline, check your connection!</string>
    <string name="tabtext_find">Search</string>
    <string name="tabtext_notification">Notification</string>
    <string name="tabtext_chat">Chat</string>
    <string name="tabtext_favorite">Favorite</string>
    <string name="delete_chat_title">Delete chat</string>
    <string name="delete_chat_message">"Are you sure you want to delete chat with "</string>
    <string name="delete_chat_all_messages">" all messages will be deleted"</string>
    <string name="delete_chat_positive">Yes</string>
    <string name="delete_chat_negative">No</string>
    <string name="widget_title_notifications">Notifications</string>
    <string name="array_value_male">Male</string>
    <string name="array_value_female">Female</string>
    <string name="message_chat">Write a message</string>
    <string name="no_notifications">No notifications</string>
    <string name="no_chats">No chats</string>
    <string name="no_favorites">No favorites</string>

    <!-- content description, translatable -->
    <string name="content_desc_user_image">user image</string>
    <string name="content_desc_tab_user">find users tab</string>
    <string name="content_desc_tab_notification">notification tab</string>
    <string name="content_desc_tab_chats">Chat user tab</string>
    <string name="content_desc_tab_favorite">Favorite tab</string>
    <string name="content_desc_user_gender">Gender of user</string>
    <string name="content_desc_user_chat_presence">User chat presence</string>
    <string name="content_desc_content_desc_chat_user">Chat user init</string>
    <string name="content_desc_image_picker">Image picker</string>
    <string name="hint_message_write">Write a message</string>
    <string name="content_desc_send_button">Send</string>
    <string name="content_desc_nav_tabs">Navigation tabs</string>
    <string name="content_desc_user_profile">User profile image</string>
    <string name="content_desc_user_like">User like</string>
    <string name="content_desc_photo_chat">Photo image chat</string>
    <string name="settings_activity_label">Settings</string>
    <string name="photo_picker">photo picker button</string>
    <string name="profile_edit_button">profile edit button</string>
    <string name="delete_chat_button">delete chat button</string>
    <string name="widget_app_icon">app icon</string>
    <string name="widiget_user_image">user image</string>
    <string name="user_name_profile_hint">Your name</string>
    <string name="user_status_profile_hint">Your status</string>

    <!-- AdMob -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_ad_id">ca-app-pub-3940256099942544~3347511713</string>

</resources>
